# jetbot

./: .gitignore
esp-module/: platformio.ini
esp-module/src/: main.cpp
test-vision/: terminator.py
tgbotcpp/: 1.txt  1982561.py  CMakeLists.txt  conanfile.txt
tgbotcpp/cmake/: dependencies_sbc.cmake
tgbotcpp/src/: main.cpp  proto.cpp
tgbotpy/: bot.py  recs.md  requirements.txt
